--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 <div class="thumbnail">
                     <!--<img src="..." alt="...">-->
                     <div class="caption">
+                        <div class="col-md-offset-10">
+                            <span class="label label-success">VB6</span>
+                        </div>
                         <h3>PDCX CSharp Code</h3>
                         <p>...</p>
                         <p><a href="https://github.com/MercuryPay/PDCX.CSharp" class="btn btn-primary" role="button">Code</a></p>
@@ -101,6 +104,9 @@
                 <div class="thumbnail">
                     <!--<img src="..." alt="...">-->
                     <div class="caption">
+                        <div class="col-md-offset-10">
+                            <span class="label label-success">VB6</span>
+                        </div>
                         <h3>PDCX CSharp Code</h3>
                         <p>...</p>
                         <p><a href="https://github.com/MercuryPay/PDCX.CSharp" class="btn btn-primary" role="button">Code</a>                            </p>
