basic layout done

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Vantiv Integrated Payments - GitHub Repo</title>
-
+    <script src="https://use.fontawesome.com/ff53abf699.js"></script>
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="basic.css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,109 +24,161 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-twitch" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-                <a class="navbar-brand" href="#">Vantiv Integrated Payments - GitHub Repos</a>
+                <a class="navbar-brand" href="#">
+				<span class="small-nav"> <span class="logo"> V </span> </span>
+				<span class="full-nav"> Vantiv IP GitHub </span>
+			</a>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <!--<form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+            <div class="">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#about-us">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="About Us"> 
+							<span class="fa fa-users"></span> 
+						</span>
+						<span class="full-nav"> About Us </span>
+					</a>
+                    </li>
+                    <li>
+                        <a href="#contact-us">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us"> 
+							<span class="glyphicon glyphicon-comment"></span> 
+						</span>
+						<span class="full-nav"> Contact Us </span>
+					</a>
+                    </li>
+                </ul>
             </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>-->
-            </div>
-            <!--/.navbar-collapse -->
+            <!--/.nav-collapse -->
         </div>
-    </nav>
+    </div>
 
+    <button type="button" class="btn btn-default btn-xs navbar-twitch-toggle">
+	<span class="glyphicon glyphicon-chevron-right nav-open"></span>		
+	<span class="glyphicon glyphicon-chevron-left nav-close"></span>
+    </button>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1>Repo Console</h1>
+            <h1>Code for Payment Integrations</h1>
             <p>Here is our GitHub library in a quick snapshot with easy access</p>
             <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
         </div>
     </div>
 
     <div class="container">
-        <!-- Example row of columns -->
-        <div class="row">
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <!--<img src="..." alt="...">-->
-                    <div class="caption">
-                        <div class="col-md-offset-9">
-                            <span class="label label-success">CSharp</span>
+        <!--
+        <section class="fluid-type">
+            <h2>Fluid Text Demo</h2>
+            <p>Here is the sample text that will shrink when browser width is reduced.</p>     
+        </section>-->
+
+
+        <div class="container">
+            <div class="row">
+                <!-- Card Projects -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-image">
+                            <!--<img class="img-responsive" src="https://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">-->
+                            <!--<span class="card-title">Material Cards</span>-->
                         </div>
-                        <h3>PDCX</h3>
-                        <p>Integration to Datacap's dsiPDCX</p>
-                        <p><a href="https://github.com/MercuryPay/PDCX.CSharp" class="btn btn-primary" role="button">Code</a></p>
+
+                        <div class="card-content">
+                            <ul class="tags">
+                                <li><a href="#" class="tag">CSharp</a></li>
+                            </ul>
+                            <h2>PDCX</h2>
+                            <p>Integrate to <a href="#" target="new_blank">Datacap</a> in a jiff with this library.</p>
+                        </div>
+
+                        <div class="card-action">
+                            <a href="https://github.com/MercuryPay/PDCX.CSharp" target="new_blank">Go to Code</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <!--<img src="..." alt="...">-->
-                    <div class="caption">
-                        <div class="col-md-offset-10">
-                            <span class="label label-success">VB6</span>
+                <!-- Card Projects -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-image">
+                            <!--<img class="img-responsive" src="https://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">-->
+                            <!--<span class="card-title">Material Cards</span>-->
                         </div>
-                        <h3>dsiEMVX</h3>
-                        <p>Integrate ActiveX Control</p>
-                        <p><a href="https://github.com/MercuryPay/dsiEMVX.VB6" class="btn btn-primary" role="button">Code</a></p>
+
+                        <div class="card-content">
+                            <ul class="tags">
+                                <li><a href="#" class="tag">VB6</a></li>
+                            </ul>
+                            <h2>dsiEMVX</h2>
+                            <p>How to integrate to an ActiveX control design by <a href="#" target="new_blank">Datacap</a></p>
+                        </div>
+
+                        <div class="card-action">
+                            <a href="https://github.com/MercuryPay/dsiEMVX.VB6" target="new_blank">Go to Code</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <!--<img src="..." alt="...">-->
-                    <div class="caption">
-                        <div class="col-md-offset-10">
-                            <span class="label label-success">VB6</span>
+                <!-- Card Projects -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-image">
+                            <!--<img class="img-responsive" src="https://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">-->
+                            <!--<span class="card-title">Material Cards</span>-->
                         </div>
-                        <h3>PDCX CSharp Code</h3>
-                        <p>...</p>
-                        <p><a href="https://github.com/MercuryPay/PDCX.CSharp" class="btn btn-primary" role="button">Code</a></p>
+
+                        <div class="card-content">
+                            <ul class="tags">
+                                <li><a href="#" class="tag">CSharp</a></li>
+                            </ul>
+                            <h2>TranCloud</h2>
+                            <p>SaaS POS interaction with Datacap Integration</p>
+                        </div>
+
+                        <div class="card-action">
+                            <a href="https://github.com/MercuryPay/TranCloud.MVC.CSharp" target="new_blank">Go to Code</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <!--<img src="..." alt="...">-->
-                    <div class="caption">
-                        <div class="col-md-offset-10">
-                            <span class="label label-success">VB6</span>
+                <!-- Card Projects -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-image">
+                            <!--<img class="img-responsive" src="https://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">-->
+                            <!--<span class="card-title">Material Cards</span>-->
                         </div>
-                        <h3>PDCX CSharp Code</h3>
-                        <p>...</p>
-                        <p><a href="https://github.com/MercuryPay/PDCX.CSharp" class="btn btn-primary" role="button">Code</a>                            </p>
+
+                        <div class="card-content">
+                            <ul class="tags">
+                                <li><a href="#" class="tag">CSharp</a></li>
+                                <li><a href="#" class="tag">MVC</a></li>
+                            </ul>
+                            <h2>PDCX</h2>
+                            <p>Cards for display in portfolio style material design by Google.</p>
+                        </div>
+
+                        <div class="card-action">
+                            <a href="https://github.com/MercuryPay/HostedCheckout.MVC.CSharp" target="new_blank">Go to Code</a>
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
         <hr>
 
         <footer>
-            <p>&copy; 2016 Company, Inc.</p>
+            <p>&copy; 2017 Vantiv Integrated Payments</p>
         </footer>
     </div>
     <!-- /container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="basic.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
