last push of day

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <ul class="tags">
                                 <li><a href="#" class="tag">CSharp</a></li>
                             </ul>
-                            <h2>PDCX</h2>
+                            <h3>PDCX</h3>
                             <p>Integrate to <a href="#" target="new_blank">Datacap</a> in a jiff with this library.</p>
                         </div>
 
@@ -112,7 +112,7 @@
                             <ul class="tags">
                                 <li><a href="#" class="tag">VB6</a></li>
                             </ul>
-                            <h2>dsiEMVX</h2>
+                            <h3>dsiEMVX</h3>
                             <p>How to integrate to an ActiveX control design by <a href="#" target="new_blank">Datacap</a></p>
                         </div>
 
@@ -133,7 +133,7 @@
                             <ul class="tags">
                                 <li><a href="#" class="tag">CSharp</a></li>
                             </ul>
-                            <h2>TranCloud</h2>
+                            <h3>TranCloud</h3>
                             <p>SaaS POS interaction with Datacap Integration</p>
                         </div>
 
@@ -155,8 +155,8 @@
                                 <li><a href="#" class="tag">CSharp</a></li>
                                 <li><a href="#" class="tag">MVC</a></li>
                             </ul>
-                            <h2>PDCX</h2>
-                            <p>Cards for display in portfolio style material design by Google.</p>
+                            <h3>Hosted Checkout</h3>
+                            <p>Shows how to integrate to Hosted Checkout platform using an iFrame.</p>
                         </div>
 
                         <div class="card-action">
