okay one more checkin

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1>Code for Payment Integrations</h1>
-            <p>Here is our GitHub library in a quick snapshot with easy access</p>
+            <img src="images/logo.png" height="50px">
+            <h1>Code Samples</h1><h3>GitHub</h3>
             <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
         </div>
     </div>
