--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="jumbotron">
         <div class="container">
             <img src="images/logo.png" height="50px">
-            <h1>Code Samples</h1><h3>GitHub</h3>
+            <h1>Code Samples</h1><h3>{ } GitHub</h3>
             <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>-->
         </div>
     </div>
