--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="navbar navbar-inverse navbar-twitch" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
 				<span class="small-nav"> <span class="logo"> V </span> </span>
 				<span class="full-nav"> Vantiv IP GitHub </span>
 			</a>
@@ -35,7 +35,7 @@
             <div class="">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#about-us">
+                        <a href="https://developer.vantiv.com">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="About Us"> 
 							<span class="fa fa-users"></span> 
 						</span>
@@ -43,7 +43,7 @@
 					</a>
                     </li>
                     <li>
-                        <a href="#contact-us">
+                        <a href="https://developer.vantiv.com/community/help-and-getting-started/main-contact-us">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Contact Us"> 
 							<span class="glyphicon glyphicon-comment"></span> 
 						</span>
@@ -56,10 +56,11 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-default btn-xs navbar-twitch-toggle">
+    <!--<button type="button" class="btn btn-default btn-xs navbar-twitch-toggle">
 	<span class="glyphicon glyphicon-chevron-right nav-open"></span>		
 	<span class="glyphicon glyphicon-chevron-left nav-close"></span>
-    </button>
+    </button>-->
+
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
