--- a/index.html
+++ b/index.html
@@ -166,6 +166,53 @@
                     </div>
                 </div>
 
+                <!-- Card Projects -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-image">
+                            <!--<img class="img-responsive" src="https://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">-->
+                            <!--<span class="card-title">Material Cards</span>-->
+                        </div>
+
+                        <div class="card-content">
+                            <ul class="tags">
+                                <li><a href="#" class="tag">PHP</a></li>
+                                <li><a href="#" class="tag">MVC</a></li>
+                            </ul>
+                            <h3>Hosted Checkout</h3>
+                            <p>Shows how to integrate to Hosted Checkout platform using an iFrame.</p>
+                        </div>
+
+                        <div class="card-action">
+                            <a href="https://github.com/MercuryPay/HostedCheckout.PHP" target="new_blank">Go to Code</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <!-- Card Projects -->
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-image">
+                            <!--<img class="img-responsive" src="https://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">-->
+                            <!--<span class="card-title">Material Cards</span>-->
+                        </div>
+
+                        <div class="card-content">
+                            <ul class="tags">
+                                <li><a href="#" class="tag">CSharp</a></li>
+                            </ul>
+                            <h3>dsiEMVX</h3>
+                            <p>How to integrate to an ActiveX control design by <a href="#" target="new_blank">Datacap</a></p>
+                        </div>
+
+                        <div class="card-action">
+                            <a href="https://github.com/MercuryPay/HostedCheckout.PHP" target="new_blank">Go to Code</a>
+                        </div>
+                    </div>
+                </div>
+
+                
+
             </div>
         </div>
 
